fix navbar hover/active state stuck in chrome

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 
 .nav-link-active-color {
   color: inherit!important;
-  text-decoration: underline;
+  text-decoration: underline!important;
 }
 
 .nav-brand-active-color {
@@ -39,7 +39,7 @@ code {
   color: inherit;
 }
 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover  {
+.navbar-light .navbar-nav .nav-link:hover  {
   color: rgba(113,113,139, 100)!important;
 }
 
